--- a/Netlify.toml
+++ b/Netlify.toml
@@ -1,8 +1,24 @@
 [build]
   functions = "netlify/functions"
+  
 [[redirects]]
   from = "/design-project"
-  to = "/.netlify/functions/sendEmail"
+  to = "/.netlify/functions/sendEmail/sendEmail"
   status = 200
   method = "POST"
+
+[[headers]]
+  for = "/*.css"
+  [headers.values]
+  Cache-Control = "public, max-age=31536000"
+
+[[headers]]
+  for = "/*.js"
+  [headers.values]
+  Cache-Control = "public, max-age=31536000"
+
+[[headers]]
+  for = "/*.png"
+  [headers.values]
+  Cache-Control = "public, max-age=31536000"
   
